# lemonade

./: .gitignore  Makefile  dune-project  esy.json  lemonade.opam.template
_build/: .db  .digest-db  log
_build/default/: META.lemonade  README.md  lemonade.dune-package  lemonade.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/ppx/: ppx_lemonade.re  ppx_lemonade.re.ml
_build/default/src/: dune  lemonade.ml-gen  lemonade_Continuation.re  lemonade_Continuation.re.ml  lemonade_Continuation.rei.mli  lemonade_Lazy.re  lemonade_Lazy.re.ml  lemonade_Lazy.rei.mli  lemonade_List.re.ml  lemonade_List.rei  lemonade_List.rei.mli  lemonade_Maybe.re  lemonade_Maybe.re.ml  lemonade_Maybe.rei.mli  lemonade_Ok.re  lemonade_Ok.re.ml  lemonade_Ok.rei.mli  lemonade_Reader.re  lemonade_Reader.re.ml  lemonade_Reader.rei  lemonade_Reader.rei.mli  lemonade_Retry.re  lemonade_Retry.re.ml  lemonade_Retry.rei  lemonade_Retry.rei.mli  lemonade_State.re  lemonade_State.re.ml  lemonade_State.rei.mli  lemonade_Stream.re  lemonade_Stream.rei  lemonade_Stream.rei.mli  (+9 more)
ppx/: dune  ppx_js.re
ppx_monadic_example/: dune  ppx_monadic.re
ppx_old/: duned  ppx_old.ml
src/: dune  lemonade_Continuation.re  lemonade_Continuation.rei  lemonade_Lazy.rei  lemonade_List.re  lemonade_Maybe.rei  lemonade_Ok.re  lemonade_Ok.rei  lemonade_Reader.re  lemonade_State.re  lemonade_State.rei  lemonade_Success.re  lemonade_Success.rei  lemonade_Type.rei  lemonade_Writer.re  lemonade_Writer.rei
testsuite/: dune  main.re  testMaybe.re  testPPX.re  testStream.re  testSuccessReader.re
(+118 files in other folders)
